# progetto_SMRV

./: .gitignore  CMakeLists.txt  SMRV.nb  a.out  display.cpp  display.hpp  displaytest.cpp  doctest.h  infection.cpp  infection.hpp  infection.test.cpp  main.cpp  rk.cpp  sfml-app  visual.cpp  visual.hpp  world.cpp  world.hpp  worldmain.cpp  worldtest.cpp
latex/: parte1.out  relazione.tex
mathematica/: SMRV.nb  V[t].nb  sir_baby.nb
parte 2/: world.hpp
parte1/: CMakeLists.txt  Makefile  display.cpp  display.hpp  infection.cpp  infection.hpp  infection.test  infection.test.cpp  main.cpp  rk.cpp
parte1/latex/: parte1.aux  parte1.fdb_latexmk  parte1.fls  parte1.tex
parte1/latex/_minted-parte1/: 0174330AB09BB1AC356D47058F0EE87DFF165F812AF0C9C1F27EAC986DE4EC00.pygtex  204FA861ACA18565428E1E6693F120EFFF165F812AF0C9C1F27EAC986DE4EC00.pygtex  65ECD1547980988CCC10AB06D1598434FF165F812AF0C9C1F27EAC986DE4EC00.pygtex  7D65911C4E6E23B5F4EDC9105C24D252FF165F812AF0C9C1F27EAC986DE4EC00.pygtex  86501964B1B13A502F3D743FB9E9B35DFF165F812AF0C9C1F27EAC986DE4EC00.pygtex  9B000B0308501AF101DFBB520FC80D86FF165F812AF0C9C1F27EAC986DE4EC00.pygtex  A0B5E93FBDEF94BC1F864106FB5070A3FF165F812AF0C9C1F27EAC986DE4EC00.pygtex  B764DD17C43607F9C14118DE5FB3C533FF165F812AF0C9C1F27EAC986DE4EC00.pygtex  BBCD34A3305574C8C2998F16BD3B6BFAFF165F812AF0C9C1F27EAC986DE4EC00.pygtex  C6E84AC0D214120F85AC68C4319A1FB2FF165F812AF0C9C1F27EAC986DE4EC00.pygtex  E3141571C04BA511C96ABE4611B94BDAFF165F812AF0C9C1F27EAC986DE4EC00.pygtex  EC2B28B0CCCF00C7B53F906D870C41B2FF165F812AF0C9C1F27EAC986DE4EC00.pygtex
parte1/matplotplusplus/: Makefile
parte1/matplotplusplus/source/: Makefile
parte1/matplotplusplus/source/matplot/: Makefile
parte2/: CMakeLists.txt  Makefile  cell.test  main.cpp  virus.test  virus_sfml  visual.cpp  visual.hpp  world.cpp  world.hpp  world.test.cpp  worldmain.cpp  worldtest.cpp
parte2/latex/: parte2.tex
parte_2/: world.cpp  world.hpp  worldtest.cpp
